--- a/src/components/GetCourse/style.scss
+++ b/src/components/GetCourse/style.scss
@@ -5,17 +5,19 @@
   .getCourse {
     padding: 10px 20px;
     font-size: 1.5rem;
-    border: 2px solid black;
+    border:none;
     border-radius: 20px;
     background: #e64041;
     color: #ffffff;
     box-shadow: 0 0 10px black;
     transition: all 0.2s ease-out;
   }
-
+  &.inner-border {
+    border: 20px solid black;
+    box-shadow: inset 0px 0px 0px 10px red;
+  }
   .getCourse:hover {
     background-color: black;
-    border: 2px solid #e64041;
     box-shadow: 0 0 10px #e64041;
   }
 }
