--- a/src/components/YourImage/style.scss
+++ b/src/components/YourImage/style.scss
@@ -9,7 +9,9 @@
     color: #e64041;
     font-size: 3rem;
     font-weight: 800;
+    letter-spacing: 0.4rem;
     height: 100px;
+    font-family: 'Poppins', sans-serif;
   }
 
   .videoContainer {
