--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -5,12 +5,29 @@
   align-items: center;
 
   .socialContainer {
-    color:#e64041;
+    display: flex;
+    color: #ffffff;
+    margin: 0 -5px;
+    justify-content: center;
+    align-self: center;
     .icons {
-      padding: 0 10px;
+      // width: 50px;
+      // height: 50px;
+      padding: 10px;
+      justify-content: center;
+      align-self: center;
+      display: flex;
+      justify-content: center;
+      align-self: center;
+      margin: 0 5px;
+      border-radius: 50px;
+      background: #e64041;
     }
   }
   .fedeNowBack {
+    margin-left: 10px;
     font-size: 2rem;
+    font-family: "Oswald", sans-serif;
+    font-weight: 800;
   }
 }
