--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -12,21 +12,27 @@ $hero-text-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 400px;
+    
     height: 250px;
     position: relative;
     top: 40%;
     left: 50%;
-    
+
     .heroTitle {
-      font-size: 3rem;
+      font-size: 4rem;
+      width: 400px;
       color: $hero-text-color;
-      font-weight: 600;
+      font-family: "Poppins", sans-serif;
+      font-weight: bold;
+      line-height: 5rem;
     }
     .heroText {
-      font-size: 2rem;
+      font-size: 2.3rem;
+      font-family: "Oswald", sans-serif;
+      font-weight: 300;
       color: $hero-text-color;
-      font-weight: 500;
+      width: 450px;
+      white-space: pre-line;
     }
   }
 }
