--- a/src/components/WhoAMe/style.scss
+++ b/src/components/WhoAMe/style.scss
@@ -14,22 +14,25 @@
   .textWhoAme {
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 400px;
     justify-content: space-between;
     margin-left: 50px;
     padding-right: 180px;
     
 
     .hello{
-      font-size:6rem
+      font-family: 'Poppins', sans-serif;
+      font-size:7rem
     }
     .fedeNowback{
       background:#000000;
-      width: 400px;
+      width: 480px;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 600;
       color:#FFFFFF;
-      font-size: 2rem;
-      //text-align: right;
-      padding: 5px 10px;
+      font-size: 3rem;
+      
+      padding-bottom: 4px;
       margin-left: -100px;
       padding-left: 100px;
       z-index:999;
@@ -37,6 +40,7 @@
     .textWhoame{
       font-size: 1.2rem;
       line-height: 2rem;
+      font-family: 'Poppins', sans-serif;
     }
 
 
