--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap');
+
+* {
   box-sizing: border-box;
 }
 body {
   margin: 0;
-  padding:0;
-
+  padding: 0;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
