font para separator y margin vertical para button

--- a/src/components/Separator/style.scss
+++ b/src/components/Separator/style.scss
@@ -4,12 +4,13 @@
   align-items: center;
 
   .separatorText {
-    font-size: 1.7rem;
-    font-weight: bold;
-    width: 300px;
+    font-size: 1.8rem;
+    font-weight: 700;
+    width: 380px;
     text-align: right;
-    line-height: 1.9rem;
+    line-height: 2.5rem;
     margin-right: 10px;
+    font-family: 'Poppins', sans-serif;
   }
   .decorationArrowRight {
     background: #e64041;
