--- a/src/components/GetCourse/style.scss
+++ b/src/components/GetCourse/style.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   .getCourse {
+    margin: 30px 0px;
     padding: 10px 20px;
     font-size: 1.5rem;
     border:none;
