--- a/src/components/CourseContent/style.scss
+++ b/src/components/CourseContent/style.scss
@@ -4,9 +4,21 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  
+  @media screen and (max-width: 480px) {
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 30px;
+  }
+  
   .courseContentContainer {
     display: flex;
     width: 100%;
+
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+    }
 
     .decorationContainer {
       display: flex;
@@ -17,24 +29,36 @@
       clip-path: polygon(0% 0%, 71% 0%, 100% 35%, 100% 64%, 72% 100%, 0% 99%);
       background: black;
       height: 300px;
+
+      @media screen and (max-width: 480px) {
+        display: none;
+      }
     }
 
     .courseInfoContainer {
       display: flex;
       flex-direction: column;
-      flex-basis: 40%;
+      //flex-basis: 40%;
       margin-left: 2rem;
       padding-left: 1rem;
 
+      @media screen and (max-width: 480px)  {
+        flex-basis: 100%;
+        margin: 0px;
+        padding: 0px;        
+      }
+
       .courseTitle {
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
         font-size: 2.2rem;
         font-weight: 800;
         padding-bottom: 20px;
+
+        @media screen and (max-width: 480px) {text-align: center;}
       }
       .courseItems {
         font-size: 1.2rem;
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
 
         .itemCourse {
           display: flex;
@@ -43,6 +67,10 @@
           padding-bottom: 20px;
           .liItem {
             padding-left: 10px;
+            @media screen and (max-width: 480px)  {
+              padding-left: 20px;
+              justify-content: center;
+            }
           }
         }
       }
