--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -17,20 +17,50 @@ $btn-login-bg: transparent;
   justify-content: space-between;
   width: 100%;
   z-index: 999;
+
+  @media screen and (max-width: 480px) {
+    background: black;
+    padding: 0px 0px;
+    justify-content: space-evenly;
+  }
   .brand {
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
     font-size: 2.2rem;
     text-align: center;
     background: $brand-bg;
     color: $brand-color;
     padding: 0 20px;
+
+    @media screen and (max-width: 480px) {
+      background: black;
+    }
+  }
+
+  .menu{
+    display: none;
+    @media screen and (max-width: 480px) {
+      display: inline-block;
+
+    }
   }
 
   .userActionsContainer {
     display: flex;
     margin-right: 50px;
+
+
+    @media screen and (max-width: 480px) {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      margin: 0px;
+      width: 100%;
+      height: 100vh;
+      top: 52px;
+      background: rgba(#000000, 0.6);
+    }
     .btn {
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
       font-size: 1.625rem;
       font-weight: bold;
       padding: 0px 10px;
@@ -41,13 +71,16 @@ $btn-login-bg: transparent;
         border: none;
         padding: 5px 10px;
         margin-right: 15px;
+        @media screen and (max-width: 480px) {
+        }
       }
       &.signup {
         background: $btn-signup-bg;
         color: #ffffff;
         border: none;
         border-radius: 20px;
-        
+        @media screen and (max-width: 480px) {
+        }
       }
     }
   }
