--- a/src/components/Separator/style.scss
+++ b/src/components/Separator/style.scss
@@ -10,24 +10,47 @@
     text-align: right;
     line-height: 2.5rem;
     margin-right: 10px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
+
+    @media screen and (max-width: 480px) {
+      font-size: 1.1rem;
+      text-align: center;
+      line-height: 2rem;
+      background: #e64041;
+      color: white;
+      margin: 0px;
+      width: 100%;
+      border-top: 5px solid black;
+      border-bottom: 5px solid black;
+      padding: 5px 30px;
+    }
   }
   .decorationArrowRight {
     background: #e64041;
     width: calc(55% - 25%); //712,5
     height: 60px;
+
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
   }
   .decorationArrowLeft {
     background: #e64041;
     width: calc(5%); //712,5
     height: 60px;
     clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
   }
-  .decorationArrowMiddle{
+  .decorationArrowMiddle {
     background: #e64041;
     width: calc(5%); //712,5
     height: 60px;
     clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
     margin-right: -1px;
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
   }
 }
