--- a/src/components/WhoAMe/style.scss
+++ b/src/components/WhoAMe/style.scss
@@ -10,6 +10,10 @@
     min-height: 600px;
     min-width: 600px;
     clip-path: polygon(0% 0%, 70% 0%, 100% 37%, 100% 62%, 74% 100%, 0% 100%);
+
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
   }
   .textWhoAme {
     display: flex;
@@ -18,31 +22,44 @@
     justify-content: space-between;
     margin-left: 50px;
     padding-right: 180px;
-    
 
-    .hello{
-      font-family: 'Poppins', sans-serif;
-      font-size:7rem
+    @media screen and (max-width: 480px) {
+      padding: 0px;
+      height: auto;
+      margin: 0;
+      padding: 30px;
     }
-    .fedeNowback{
-      background:#000000;
+
+    .hello {
+      font-family: "Poppins", sans-serif;
+      font-size: 7rem;
+
+      @media screen and (max-width: 480px) {
+        font-size: 5rem;
+      }
+    }
+    .fedeNowback {
+      background: #000000;
       width: 480px;
-      font-family: 'Oswald', sans-serif;
+      font-family: "Oswald", sans-serif;
       font-weight: 600;
-      color:#FFFFFF;
+      color: #ffffff;
       font-size: 3rem;
-      
+
       padding-bottom: 4px;
       margin-left: -100px;
       padding-left: 100px;
-      z-index:999;
+      z-index: 999;
+
+      @media screen and (max-width: 480px) {
+        font-size: 2.5rem;
+        width: auto;
+      }
     }
-    .textWhoame{
+    .textWhoame {
       font-size: 1.2rem;
       line-height: 2rem;
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
     }
-
-
   }
 }
