--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
   
 }
 
+a{
+  all:unset
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
