--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -46,6 +46,7 @@ $btn-login-bg: transparent;
 
   .userActionsContainer {
     display: flex;
+    align-items: center;
     margin-right: 50px;
 
 
