--- a/src/components/WhoAMe/style.scss
+++ b/src/components/WhoAMe/style.scss
@@ -14,6 +14,10 @@
     @media screen and (max-width: 480px) {
       display: none;
     }
+
+    @media only screen and (min-width: 481px) and (max-width: 768px) {
+      display: none;
+    }
   }
   .textWhoAme {
     display: flex;
