--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -36,11 +36,10 @@ $btn-login-bg: transparent;
     }
   }
 
-  .menu{
+  .menu {
     display: none;
     @media screen and (max-width: 480px) {
       display: inline-block;
-
     }
   }
 
@@ -49,17 +48,25 @@ $btn-login-bg: transparent;
     align-items: center;
     margin-right: 50px;
 
-
     @media screen and (max-width: 480px) {
-      display: none;
       flex-direction: column;
       position: absolute;
       margin: 0px;
       width: 100%;
       height: 100vh;
       top: 52px;
-      background: rgba(#000000, 0.6);
+      background: rgba(#000000,0.7);
+      align-items: center;
+
+      &.menu {
+        display: flex;
+      }
+
+      &.hidenMenu {
+        display: none;
+      }
     }
+
     .btn {
       font-family: "Poppins", sans-serif;
       font-size: 1.625rem;
