--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -3,17 +3,14 @@ $hero-text-color: #ffffff;
 .heroContainer {
   display: flex;
   min-height: 100vh;
-  background: url("../../assets/images/hero-img.jpg");
+  max-height: 100vh;
+  background: url("../../assets/images/hero-img.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 
-  @media only screen and (min-width: 1281px) {
-    background: url("../../assets/images/Recursos-05.png");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
+  
   @media only screen and (max-width: 480px) {
     background: url("../../assets/images/fondorojo.png");
     background-position: right;
@@ -21,6 +18,17 @@ $hero-text-color: #ffffff;
     background-repeat: no-repeat;
     justify-content: center;
     align-items: center;
+  }
+
+
+  .imgFedeNowback{
+    position: absolute;
+    bottom: 0;
+    left: 60px;
+    width: auto;
+    height: 600px;
+
+    @media only screen and (max-width: 480px) {display: none;}
   }
 
   .heroTextContainer {
@@ -33,7 +41,7 @@ $hero-text-color: #ffffff;
     top: 40%;
     left: 55%;
 
-    @media only screen and (min-width: 1281px) {display: none;}
+   
 
     @media only screen and (max-width: 480px) {
       position: relative;
